Fixes dialog sizes on mobile

--- a/src/styles/dialogs.css
+++ b/src/styles/dialogs.css
@@ -13,11 +13,17 @@ aside {
 
         h2 {
             text-align: center;
+            margin: 0;
         }
         p {
             background-color: var(--light-beije);
             padding: 10px;
             border-radius: 4px;
+        }
+
+        @media (max-width: 425px) {
+            width: 300px;
+            font-size: 1em;
         }
     }
 
@@ -33,13 +39,26 @@ aside {
             gap: 15px;
             align-items: center;
             margin: 0;
-        }
 
+            .dialog-buttons-container {
+                display: flex;
+                gap: 10px;
+            }
+
+            @media (max-width: 425px) {
+                flex-direction: column;
+            }
+        }
+        
         input {
             border-radius: 6px;
             height: 25px;
             padding: 15px;
             font-size: 1.3em;
+        }
+
+        @media (max-width: 425px) {
+            flex-direction: column;
         }
     }
 
